<resources>
    <string name="app_name">GifTessera</string>
<!--    Used in About display. This is set programmatically to
    actual versionName, but keep current here just in case
    1.3.2 was last release - 11/21/2019 -->
    <string name="app_version">1.3.2</string>

<!--    Button names-->
    <string name="peek_button">Peek Button</string>
    <string name="next_frame_button">Next Frame Button</string>
    <string name="prev_frame_button">Previous Frame Button</string>
    <string name="play_button">Play Button</string>
    <string name="jump_input">Jump Input</string>
    <string name="jump_hint">#</string>
    <string name="add_frame_button">Add or Insert Frame Button</string>
    <string name="del_frame_button">Delete Frame Button</string>
    <string name="dwg_palette_6">Drawing Palette 6</string>
    <string name="dwg_palette_5">Drawing Palette 5</string>
    <string name="dwg_palette_4">Drawing Palette 4</string>
    <string name="dwg_palette_3">Drawing Palette 3</string>
    <string name="dwg_palette_2">Drawing Palette 2</string>
    <string name="dwg_palette_1">Drawing Palette 1</string>
    <string name="dwg_palette_0">Drawing Palette 0</string>
    <string name="color_library_button">Color Library Button</string>
    <string name="screen_description">transparent screen to catch click</string>
    <string name="pan_button">Pan Button</string>
    <string name="pen_size_button">Pen Size Button</string>

<!--    Color buttons-->
    <string name="white_button">White Button</string>


<!--    Alert text-->
    <string name="alert_delete_frame_title">Confirm Delete Current Frame</string>
    <string name="alert_delete_frame_message">Are you sure you want to delete this frame?</string>
    <string name="no_never_mind">No, never mind</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="alert_new_session_title">Confirm New Project</string>
    <string name="alert_new_session_message">Do you want to start over with a new project?
        Any current unsaved work will be lost.</string>
    <string name="yes_new_proj">Yes, new project</string>
    <string name="alert_delete_save_title">Confirm Delete Save File</string>
    <string name="alert_delete_save_message">Are you sure you want to delete </string>
    <string name="yes_save_over">Yes, save over</string>
    <string name="alert_overwrite_save_title">Confirm Overwrite Save</string>
    <string name="alert_overwrite_save_message">Are you sure you want to save over </string>
    <string name="alert_load_save_title">Confirm Load File</string>
    <string name="alert_load_save_message">Are you sure you want to load %s?
        Any current unsaved work will be lost.</string>
    <string name="yes_load">Yes, load file</string>

<!--    Menu items-->
    <string name="new_proj">New Project</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>
    <string name="load">Load</string>
    <string name="export">Export Gif</string>
    <string name="export_saves">Export Saves</string>
    <string name="import_saves">Import Saves</string>
    <string name="invalid_selection">Invalid Selection</string>

<!--    Misc-->
    <string name="frame">Frame</string>
    <string name="temp">temp</string>

<!--    Files Activity-->
    <string name="new_save">New Save</string>
    <string name="file_name">File name</string>
    <string name="overwrite_past_save">Overwrite Past Save</string>
    <string name="load_past_save">Load Save File</string>
    <string name="file_delete_button">File delete button</string>
    <string name="no_files_found">No previous saves found</string>
    <string name="missing_name">Please enter file name</string>
    <string name="existing_name">Name taken, please enter unique name, or tap the file you want to overwrite</string>
    <string name="no_data">No current data to save</string>
    <string name="file_in_use">Can not delete. File in use.</string>

<!--    Main Activity-->
    <string name="frame_added_after">Frame added after %d</string>
    <string name="error_saving">Error Saving</string>
    <string name="saved_as">Saved as</string>
    <string name="fs_not_available">File system not available</string>
    <string name="save_before_export">Must save before exporting</string>
    <string name="saving_to_gif">Saving %s to gif…</string>
    <string name="processing_frame">Processing frame %d of %d…</string>
    <string name="finished_saving_gif">Finished saving %s to gif</string>
    <string name="error_saving_gif">Error saving %s to gif</string>
    <string name="error_loading">Error loading file</string>
    <string name="permission_required">Permission required to save gif</string>
    <string name="db_export_error">Error exporting saves</string>
    <string name="db_import_error">Error importing saves</string>
    <string name="invalid_number">Invalid number</string>

<!--    Help text-->
    <string name="prev_help_entry">Move to previous frame.</string>
    <string name="next_help_entry">Move to next frame.</string>
    <string name="play_help_entry">Play animation from start. When running, turns into…</string>
    <string name="stop_help_entry">Stop animation.</string>
    <string name="pan_help_text">Move the whole image together</string>
    <string name="delete_help_entry">Delete current frame.</string>
    <string name="add_help_entry">Insert new frame after current. New frame will be copy of current.</string>
    <string name="peek_help_entry">Peek previous. Shows previous frame as long as it is held down.</string>
    <string name="back_to_giftessera">Back to GifTessera</string>
    <string name="help">Help</string>

<!--    About text-->
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="by">By</string>
    <string name="author"><a href="http://cs.kchatman.com/">Kyle Chatman</a></string>
    <string name="license">License</string>
    <string name="license_is">Copyright 2019-2025 Kyle Chatman. GifTessera is free to use,
        <a href="https://github.com/etoitau/GifTessera">open source</a>,
        and is licensed under the
        <a href="https://www.gnu.org/licenses/gpl-3.0.txt">GNU General Public License v.3.0</a>
    </string>

</resources>
